# selfRF

./: .gitignore  README.md  pyproject.toml
selfrf/data/: data_generators.py  data_modules.py  datasets.py  storage.py
selfrf/finetuning/detection/detectron2/: config.py  dataset_manager.py  debug.py  evaluate.py  lazy_trainer.py  mapper.py  ray_job.yaml  ray_train_detection.py  register.py  to_coco_dataset.py  train_detection.py  trainer.py  vis.py  visualizer.py
selfrf/models/iq_models/: __init__.py
selfrf/models/iq_models/resnet/: resnet1d.py
selfrf/models/spectrogram_models/: __init__.py
selfrf/models/spectrogram_models/resnet/: __init__.py  resnet.py
selfrf/models/spectrogram_models/vit/: __init_.py  vit.py
selfrf/models/ssl_models/: byol.py
selfrf/pretraining/config/: __init__.py  base_config.py  evaluation_config.py  training_config.py
selfrf/pretraining/evalutation/: __init__.py  knn.py  tsne.py
selfrf/pretraining/factories/: __init__.py  collate_fn_factory.py  dataset_factory.py  model_factory.py  transform_factory.py
selfrf/pretraining/utils/: __init__.py  callbacks.py  enums.py  utils.py
selfrf/transforms/: __init__.py
selfrf/transforms/extra/: __init__.py  functional.py  target_transforms.py  torchsig_legacy_functional.py  torchsig_legacy_transforms.py  transforms.py
selfrf/transforms/ssl/: __init__.py  byol_transform.py
selfrf/utils/: visualizer.py
tools/: evaluate_pretraining.py  generate_narrowband.py  generate_wideband.py  pretraining.py  ray_pretraining.py  ray_train_detection.py  train_detection.py
(+4 files in other folders)
